--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
     <!-- section about -->
-    <section class="about container">
+    <section class="about">
         <div class="container-about" data-aos="fade-right" data-aos-duration="1000">
             <img src="/Assets/hospital fasilities.jpg" alt="Hospital Facilities">
         </div>
