non active zoom out

--- a/err.html
+++ b/err.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RS Medika Nusantara | Ibu Kota Nusantara </title>
     <!-- get icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -127,7 +126,6 @@
     </section>
     <!-- end section card -->
 
-
     <!-- section about -->
     <section class="about container">
         <div class="container-about" data-aos="fade-right" data-aos-duration="1000">
@@ -146,153 +144,7 @@
         </div>
     </section>
     <!-- END section about -->
-
-    <section class="container">
-        <h5>Article From Medika Nusantara</h5>
-        <div class="news" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-            <article class="card">
-                <div class="img-container">
-                    <img src="/Assets/health.jpg" alt="health picture">
-                </div>
-                <div class="content">
-                    <div class="date">
-                        <time>25 November 2023</time>
-                    </div>
-                    <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
-                    <div>
-                        <p>
-                            Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
-                            dan hindari merokok.
-                        </p>
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <div class="img-container">
-                    <img src="/Assets/health.jpg" alt="health picture">
-                </div>
-                <div class="content">
-                    <div class="date">
-                        <time>25 November 2023</time>
-                    </div>
-                    <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
-                    <div>
-                        <p>
-                            Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
-                            dan hindari merokok.
-                        </p>
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <div class="img-container">
-                    <img src="/Assets/health.jpg" alt="health picture">
-                </div>
-                <div class="content">
-                    <div class="date">
-                        <time>25 November 2023</time>
-                    </div>
-                    <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
-                    <div>
-                        <p>
-                            Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
-                            dan hindari merokok.
-                        </p>
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <div class="img-container">
-                    <img src="/Assets/health.jpg" alt="health picture">
-                </div>
-                <div class="content">
-                    <div class="date">
-                        <time>25 November 2023</time>
-                    </div>
-                    <h3>Cara mengurangi Resiko Terkena Serangan Jantung</h3>
-                    <div>
-                        <p>
-                            Mengurangi risiko serangan jantung, perhatikan diet sehat, berolahraga rutin, kelola stres,
-                            dan hindari merokok.
-                        </p>
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-            </article>
-        </div>
-
-    </section>
-
-    <!-- Footer Structure -->
-    <footer>
-        <div class="footer-row">
-            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
-                <div>
-                    <img src="/Assets/logo company.png" alt="Hospital Logo">
-                </div>
-                <h3>Medika Nusantara</h3>
-                <p>Kawasan Inti Pusat Pemerintahan Ibu Kota Negara, Kecamatan Sepaku, Penajam Paser Utara, Kalimantan
-                    Timur</p>
-            </section>
-
-            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
-                <h4>About Us</h4>
-                <ul>
-                    <li> <a href="#">History</a></li>
-                    <li><a href="#">Overview</a></li>
-                    <li><a href="#">Investor Relations</a></li>
-                    <li><a href="#">Education and Training</a></li>
-                    <li><a href="#">Our Management</a></li>
-                </ul>
-            </section>
-
-            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
-                <h4>Coporate</h4>
-                <ul>
-                    <li><a href="#">Buat Janji Temu</a></li>
-                    <li><a href="#">Cari Dokter</a></li>
-                    <li><a href="#">Cari Lokasi</a></li>
-                    <li><a href="#">Karir</a></li>
-                </ul>
-            </section>
-
-            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
-                <h4>Newsletter</h4>
-                <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
-                <form action="#">
-                    <input type="text" placeholder="Your email" required>
-                    <button id="subscribe" type="submit">SUBSCRIBE</button>
-                </form>
-                <div class="sosial-media">
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                </div>
-            </section>
-        </div>
-        <div class="copy-right">
-            <p>Copyright &copy; 2023 Medika Nusantara. All rights reserved.</p>
-            <div class="privacy">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Help & Support</a>
-            </div>
-        </div>
-    </footer>
+    
 
     <script src="/src/script/menu.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
