navbar 320px ok

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <form>
                     <div class="input-container">
                         <i class="icon-search fas fa-search"></i>
-                        <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
+                        <input type="text" class="input-text" placeholder="Search service information">
                         <button id="search">Search</button>
                     </div>
                 </form>
