--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
 
     <!-- Section hero image -->
     <section class="hero">
-        
+        <div class="caption-hero container">
+            <h3>Take Care of Your Healthy Now</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque, harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum</p>
+            <div>
+                <button>Get Appointment</button>
+            </div>
+        </div>
     </section>
     <!-- END Section hero image -->
 
