pic hero cant not shoe

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Section hero image -->
     <section class="hero">
-        <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-easing="ease-in-sine">
+        <div class="caption-hero" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-easing="ease-in-sine">
             <h3>Take Care of Your Healthy Now</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque, harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum</p>
             <div>
