delete animate aos on header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- header Structure -->
-    <header data-aos="fade-down" data-aos-duration="500" data-aos-easing="linear">
+    <header>
         <div class="head container">
             <div class="logo">
                 <img src="/Assets/logo company.png" alt="logo">
@@ -88,9 +88,12 @@
 
     <!-- Section hero image -->
     <section class="hero">
-        <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-easing="ease-in-sine">
+        <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            data-aos-easing="ease-in-sine">
             <h3>Take Care of Your Healthy Now</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque, harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque,
+                harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur
+                rerum</p>
             <div>
                 <button>Get Appointment</button>
             </div>
@@ -246,7 +249,8 @@
     <!-- Footer Structure -->
     <footer>
         <div class="footer-row">
-            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300"
+                data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <div>
                     <img src="/Assets/logo company.png" alt="Hospital Logo">
                 </div>
@@ -255,7 +259,8 @@
                     Timur</p>
             </section>
 
-            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                data-aos-duration="500">
                 <h4>About Us</h4>
                 <ul>
                     <li> <a href="#">History</a></li>
@@ -266,7 +271,8 @@
                 </ul>
             </section>
 
-            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                data-aos-duration="500">
                 <h4>Coporate</h4>
                 <ul>
                     <li><a href="#">Buat Janji Temu</a></li>
@@ -276,7 +282,8 @@
                 </ul>
             </section>
 
-            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <h4>Newsletter</h4>
                 <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
                 <form action="#">
