delete aos on header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- header Structure -->
-    <header data-aos="fade-down" data-aos-duration="500" data-aos-easing="linear">
+    <header>
         <div class="head container">
             <div class="logo">
                 <img src="/Assets/logo company.png" alt="logo">
