fix problem hero section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="/src/styles/navbar.css"> <!--Navbar-->
     <link rel="stylesheet" href="/src/styles/footer.css">
     <link rel="stylesheet" href="/src/styles/fotnav-res.css"> <!--Responsive navbar and Footer-->
-    <link rel="stylesheet" href="/Public/style.css"> <!-- Prorch css-->
-    <link rel="stylesheet" href="/Public/responsive.css">
+    <link rel="stylesheet" href="style.css"> <!-- Prorch css-->
+    <link rel="stylesheet" href="responsive.css">
 
     <!-- add font from google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,6 +88,9 @@
 
     <!-- Section hero image -->
     <section class="hero">
+        <div class="hero-img-container">
+            <img src="/Assets/hero.jpg" alt="hero-imagex`">
+        </div>
         <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-easing="ease-in-sine">
             <h3>Take Care of Your Healthy Now</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque, harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum</p>
