add link to link Specialities

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul class="navigation hidden" id="menu-list">
                 <li><a href="#" class="active">Porch</a></li>
                 <li><a href="#">Appointments</a></li>
-                <li><a href="#">Specialties</a></li>
+                <li><a href="/Pages/specialist.html">Specialties</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Information</a></li>
                 <a class="disable-login">Login/Register</a>
@@ -304,7 +304,7 @@
     </footer>
 
     <script src="/src/script/menu.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
     <script>AOS.init();</script>
 </body>
 
