--- a/Pages/specialist.html
+++ b/Pages/specialist.html
@@ -119,5 +119,8 @@
             </div>
         </div>
     </section>
+    <script src="/src/script/menu.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
+    <script>AOS.init();</script>
 </body>
 </html>
