--- a/Pages/specialist.html
+++ b/Pages/specialist.html
@@ -182,7 +182,7 @@
         </div>
 
     </section>
-    <section class="doctor-tooth container">
+    <section class="doctor container">
         <h4>Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
             <div class="card-specialist-doctor">
@@ -242,7 +242,7 @@
         </div>
 
     </section>
-    <section class="doctor-tooth container">
+    <section class="doctor container">
         <h4>Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
             <div class="card-specialist-doctor">
