fix page appoinment

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -65,8 +65,7 @@
             </div>
             <ul class="navigation hidden" id="menu-list">
                 <li><a href="/index.html">Porch</a></li>
-                <li><a href="#">Appointments</a></li>
-                <li><a href="#" class="active">Specialties</a></li>
+                <li><a href="#" class="active">Appointments</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Information</a></li>
                 <a class="disable-login">Login/Register</a>
@@ -122,9 +121,7 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     
-=======
     <section class="doctor container">
         <h4>Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
@@ -366,7 +363,6 @@
             </div>
         </div>
     </footer>
->>>>>>> app
     <script src="/src/script/menu.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
