--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
             </div>
             <ul class="navigation hidden" id="menu-list">
                 <li><a href="#" class="active">Porch</a></li>
-                <li><a href="#">Appointments</a></li>
-                <li><a href="/Pages/specialist.html">Specialties</a></li>
+                <li><a href="/Pages/appointments.html">Appointments</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Information</a></li>
                 <a class="disable-login">Login/Register</a>
