--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </form>
             </div>
             <div class="menu">
-                <div class="emergency-call">
+                <div class="emergency-call" id="emergencyCall">
                     <i class="fa-solid fa-phone"></i>
                     <p>Emergency Call</p>
                 </div>
@@ -90,9 +90,12 @@
         <div class="hero-img-container">
             <img src="/Assets/hero.jpg" alt="hero-imagex`">
         </div>
-        <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-easing="ease-in-sine">
+        <div class="caption-hero container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            data-aos-easing="ease-in-sine">
             <h3>Take Care of Your Healthy Now</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque, harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur rerum</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos pariatur molestias. Doloremque,
+                harum perspiciatis unde blanditiis quas aut sed quibusdam tenetur, eligendi, incidunt iure consequatur
+                rerum</p>
             <div>
                 <button>Get Appointment</button>
             </div>
@@ -248,7 +251,8 @@
     <!-- Footer Structure -->
     <footer>
         <div class="footer-row">
-            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300"
+                data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <div>
                     <img src="/Assets/logo company.png" alt="Hospital Logo">
                 </div>
@@ -257,7 +261,8 @@
                     Timur</p>
             </section>
 
-            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                data-aos-duration="500">
                 <h4>About Us</h4>
                 <ul>
                     <li> <a href="#">History</a></li>
@@ -268,7 +273,8 @@
                 </ul>
             </section>
 
-            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                data-aos-duration="500">
                 <h4>Coporate</h4>
                 <ul>
                     <li><a href="#">Buat Janji Temu</a></li>
@@ -278,7 +284,8 @@
                 </ul>
             </section>
 
-            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <h4>Newsletter</h4>
                 <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
                 <form action="#">
@@ -303,8 +310,22 @@
     </footer>
 
     <script src="/src/script/menu.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
+
+    <script>
+        const emergencyCall = document.getElementById('emergencyCall');
+
+
+        if (emergencyCall) {
+            emergencyCall.addEventListener('click', function () {
+                // Ganti nomor telepon dengan nomor yang diinginkan
+                const phoneNumber = '+6282112706323';
+
+                window.location.href = 'tel:' + phoneNumber;
+            });
+        }
+    </script>
 </body>
 
 </html>
