--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 
 
         if (emergencyCall) {
+            emergencyCall.style.cursor = 'pointer'
             emergencyCall.addEventListener('click', function () {
-                // Ganti nomor telepon dengan nomor yang diinginkan
                 const phoneNumber = '+6282112706323';
 
                 window.location.href = 'tel:' + phoneNumber;
