add jump to section on doctor specialist

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -99,7 +99,7 @@
                     <img src="/Assets/tooth.png" alt="icon tooth">
                 </div>
                 <div class="card-body">
-                    <a href="#" class="">Tooth</a>
+                    <a href="#TS" class="">Tooth</a>
                 </div>
             </div>
             <div class="card-specialist">
@@ -107,7 +107,7 @@
                     <img src="/Assets/surgery-room.png" alt="icon tooth">
                 </div>
                 <div class="card-body">
-                    <a href="#" class="">General Surgery</a>
+                    <a href="#TSS" class="">General Surgery</a>
                 </div>
             </div>
             <div class="card-specialist">
@@ -115,14 +115,14 @@
                     <img src="/Assets/heart.png" alt="icon tooth">
                 </div>
                 <div class="card-body">
-                    <a href="#" class="">Internal Medicine</a>
+                    <a href="#IMS" class="">Internal Medicine</a>
                 </div>
             </div>
         </div>
     </section>
 
     
-    <section class="doctor container">
+    <section class="doctor container" id="TS">
         <h4>Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
             <div class="card-specialist-doctor">
@@ -182,8 +182,8 @@
         </div>
 
     </section>
-    <section class="doctor container">
-        <h4>Tooth Specialist</h4>
+    <section class="doctor container" id="TSS">
+        <h4>General Surgery Specialist</h4>
         <div class="card-specialist-doctor-list">
             <div class="card-specialist-doctor">
                 <div class="image-doctor">
@@ -242,8 +242,8 @@
         </div>
 
     </section>
-    <section class="doctor container">
-        <h4>Tooth Specialist</h4>
+    <section class="doctor container" id="IMS">
+        <h4>Internal Medicine Specialist</h4>
         <div class="card-specialist-doctor-list">
             <div class="card-specialist-doctor">
                 <div class="image-doctor">
