fix function call

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -31,61 +31,61 @@
 </head>
 
 <body>
-    <!-- header Structure -->
-    <header>
-        <div class="head container">
-            <div class="logo">
-                <img src="/Assets/logo company.png" alt="logo">
-                <h4>Medika Nusantara</h4>
-            </div>
-            <div class="search">
-                <form>
-                    <div class="input-container">
-                        <i class="icon-search fas fa-search"></i>
-                        <input type="text" class="input-text" placeholder="Search service information">
-                        <button id="search">Search</button>
-                    </div>
-                </form>
-            </div>
-            <div class="menu">
-                <div class="emergency-call">
-                    <i class="fa-solid fa-phone"></i>
-                    <p>Emergency Call</p>
+   <!-- header Structure -->
+   <header>
+    <div class="head container">
+        <div class="logo">
+            <img src="/Assets/logo company.png" alt="logo">
+            <h4>Medika Nusantara</h4>
+        </div>
+        <div class="search">
+            <form>
+                <div class="input-container">
+                    <i class="icon-search fas fa-search"></i>
+                    <input type="text" class="input-text" placeholder="Search service information">
+                    <button id="search">Search</button>
                 </div>
-                <div class="language">
-                    <i class="fa-solid fa-globe"></i>
-                    <p>ID</p>
-                </div>
+            </form>
+        </div>
+        <div class="menu">
+            <div class="emergency-call" id="emergencyCall">
+                <i class="fa-solid fa-phone"></i>
+                <p>Emergency Call</p>
+            </div>
+            <div class="language">
+                <i class="fa-solid fa-globe"></i>
+                <p>ID</p>
             </div>
         </div>
-        <!--structure navigation bar -->
-        <nav class="wrapp-nav container">
-            <div class="hamburger" id="hamburger-menu">
-                <i class="fa-solid fa-bars" id="hamburgericon" style="color: #0F172A;"></i>
-            </div>
-            <ul class="navigation hidden" id="menu-list">
-                <li><a href="/index.html">Porch</a></li>
-                <li><a href="#" class="active">Appointments</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Information</a></li>
-                <a class="disable-login">Login/Register</a>
-            </ul>
-            <div class="search" id="search-nav">
-                <form>
-                    <div class="input-container">
-                        <i class="icon-search fas fa-search"></i>
-                        <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
-                        <button id="search">Search</button>
-                    </div>
-                </form>
-            </div>
-            <div class="login-register">
-                <a href="#">Login/Register</a>
-            </div>
-        </nav>
-        <!-- End structure navigation bar  -->
-    </header>
-    <!-- End header Structure -->
+    </div>
+    <!--structure navigation bar -->
+    <nav class="wrapp-nav container">
+        <div class="hamburger" id="hamburger-menu">
+            <i class="fa-solid fa-bars" id="hamburgericon" style="color: #0F172A;"></i>
+        </div>
+        <ul class="navigation hidden" id="menu-list">
+            <li><a href="/index.html">Porch</a></li>
+            <li><a href="#" class="active">Appointments</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Information</a></li>
+            <a class="disable-login">Login/Register</a>
+        </ul>
+        <div class="search" id="search-nav">
+            <form>
+                <div class="input-container">
+                    <i class="icon-search fas fa-search"></i>
+                    <input type="text" class="input-text" placeholder="Cari Dokter, Layanan, atau Informasi">
+                    <button id="search">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="login-register">
+            <a href="#">Login/Register</a>
+        </div>
+    </nav>
+    <!-- End structure navigation bar  -->
+</header>
+<!-- End header Structure -->
 
     <section class="hero-specialist">
         <h1>Specialties</h1>
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    
+
     <section class="doctor container" id="TS">
         <h4>Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
