--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/src/styles/fotnav-res.css"> <!--Responsive navbar and Footer-->
     <link rel="stylesheet" href="style.css"> <!-- Prorch css-->
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="/src/styles/specialist.css">
+    <link rel="stylesheet" href="/src/styles/appointments.css">
 
     <!-- add font from google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
