add linking navigation bar

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <ul class="navigation hidden" id="menu-list">
                 <li><a href="#" class="active">Porch</a></li>
                 <li><a href="/Pages/appointments.html">Appointments</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Information</a></li>
+                <li><a href="/Pages/service.html">Service</a></li>
+                <li><a href="/Pages/information.html">Information</a></li>
                 <a class="disable-login">Login/Register</a>
             </ul>
             <div class="search" id="search-nav">
